msm-8996: leeco to sony
Signed-off-by: Erik Castricum <git@cas-online.nl>
Change-Id: Ieb7351a35973ae713f35392423ffea00eca87d35

--- a/devicesettings/AndroidManifest.xml
+++ b/devicesettings/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </receiver>
 
         <activity
-            android:name=".LeecoPreferenceActivity"
+            android:name=".SonyPreferenceActivity"
             android:label="@string/device_settings_app_name"
             android:theme="@style/DeviceSettings">
             <intent-filter>
