--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -149,7 +149,7 @@ WIFI_SUPPLICANT_INFO=BASIC
 # GTP-WAA     0x100
 # SAP         0Xc0
 # ODCPI      0x1000
-# FREE_WIFI_SCAN_INJECT   0x2000
+# FREE_WIFI_SCAN_INJECT   0kagura000
 # SUPL_WIFI   0x4000
 # WIFI_SUPPLICANT_INFO   0x8000
 
