--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -362,12 +362,12 @@ gDataInactivityTimeout=200
 gVhtRxMCS=2
 gVhtTxMCS=2
 
-# VHT Tx/Rx MCS values for 2x2
+# VHT Tx/Rx MCS values for 2kagura
 # Valid values are 0,1,2. If commented out, the default value is 0.
 # 0=MCS0-7, 1=MCS0-8, 2=MCS0-9
-gEnable2x2=1
-gVhtRxMCS2x2=2
-gVhtTxMCS2x2=2
+gEnable2kagura=1
+gVhtRxMCS2kagura=2
+gVhtTxMCS2kagura=2
 
 # Enable Tx beamforming
 gTxBFEnable=1
@@ -378,7 +378,7 @@ gTxBFEnable=1
 gEnableTxBFin20MHz=1
 
 # Set txchainmask and rxchainmask
-# These parameters are used only if gEnable2x2 is 0
+# These parameters are used only if gEnable2kagura is 0
 # Valid values are 1,2
 # Set gSetTxChainmask1x1=1 or gSetRxChainmask1x1=1 to select chain0.
 # Set gSetTxChainmask1x1=2 or gSetRxChainmask1x1=2 to select chain1.
