--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -30,7 +30,7 @@ DEBUG_LEVEL = 2
 INTERMEDIATE_POS=1
 
 # supl version 2.0
-SUPL_VER=0x20000
+SUPL_VER=0kagura0000
 
 # Emergency SUPL, 1=enable, 0=disable
 #SUPL_ES=1
@@ -52,7 +52,7 @@ SUPL_MODE=3
 # MSB = 0x02
 # MSA = 0x04
 # ON_DEMAND_TIME = 0x10
-# GEOFENCE = 0x20
+# GEOFENCE = 0kagura0
 # default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE
 CAPABILITIES=0x37
 
@@ -139,7 +139,7 @@ SGLTE_TARGET=0
 # Select Positioning Protocol on A-GLONASS system
 ##################################################
 # 0x1: RRC CPlane
-# 0x2: RRLP UPlane
+# 0kagura: RRLP UPlane
 # 0x4: LLP Uplane
 A_GLONASS_POS_PROTOCOL_SELECT = 0
 
@@ -147,7 +147,7 @@ A_GLONASS_POS_PROTOCOL_SELECT = 0
 # Select technology for LPPe Control Plane
 ##################################################
 # 0x1: DBH for LPPe CP
-# 0x2: WLAN AP Measurements for LPPe CP
+# 0kagura: WLAN AP Measurements for LPPe CP
 # 0x4: SRN AP measurement for CP
 # 0x8: Sensor Barometer Measurement LPPe CP
 #LPPE_CP_TECHNOLOGY = 0
@@ -156,7 +156,7 @@ A_GLONASS_POS_PROTOCOL_SELECT = 0
 # Select technology for LPPe User Plane
 ##################################################
 # 0x1: DBH for LPPe UP
-# 0x2: WLAN AP Measurements for LPPe UP
+# 0kagura: WLAN AP Measurements for LPPe UP
 # 0x4: SRN AP measurement for UP
 # 0x8: Sensor Barometer Measurement LPPe UP
 #LPPE_UP_TECHNOLOGY = 0
