--- a/health/android.hardware.health@2.0-service.leeco_8996.rc
+++ b/health/android.hardware.health@2.0-service.leeco_8996.rc
@@ -1,4 +1,4 @@
-service vendor.health-hal-2-0 /vendor/bin/hw/android.hardware.health@2.0-service.leeco_8996
+service vendor.health-hal-2-0 /vendor/bin/hw/android.hardware.health@2.0-service.sony_8996
     class hal
     user system
     group system
