--- a/liblight/android.hardware.light@2.0-service.leeco_8996.rc
+++ b/liblight/android.hardware.light@2.0-service.leeco_8996.rc
@@ -64,7 +64,7 @@ on init
     chmod 660 /sys/class/leds/blue/brightness
     chmod 660 /sys/class/leds/green/brightness
 
-service light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.leeco_8996
+service light-hal-2-0 /vendor/bin/hw/android.hardware.light@2.0-service.sony_8996
     class hal
     user system
     group system
